--- a/Translations/German/text-cityName-change.xml
+++ b/Translations/German/text-cityName-change.xml
@@ -91,6 +91,10 @@
 		<de-DE>Ascrivium</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_CITYNAME_ASPADANA</zType>
+		<de-DE>Aspadana</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_CITYNAME_ASPALATHOS</zType>
 		<de-DE>Aspalathos</de-DE>
 	</Entry>
@@ -276,6 +280,10 @@
 		<de-DE>Tamiat</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_CITYNAME_DARBAND</zType>
+		<de-DE>Darband</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_CITYNAME_DELPHI</zType>
 		<de-DE>Delphi</de-DE>
 	</Entry>
@@ -329,7 +337,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_ELLASAR</zType>
-		<de-DE>Ellasar</de-DE>
+		<de-DE>Dur-Athara</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_EPHESUS</zType>
@@ -650,7 +658,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_MELIDDU</zType>
-		<de-DE>Meliddu</de-DE>
+		<de-DE>Malidiya</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_TUSHPA</zType>
@@ -868,7 +876,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_POMPALEO</zType>
-		<de-DE>Pompaleo</de-DE>
+		<de-DE>Pompaelo</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_POMPEII</zType>
