--- a/Translations/German/text-tribe-change.xml
+++ b/Translations/German/text-tribe-change.xml
@@ -11,6 +11,9 @@
 		<de-DE>Rebellen~Rebbeln~ein Rebelle~Rebellen~Rebelle</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_REBELS_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_REBELS_HELP</zType>
 		<de-DE>Rebel Units are spawned from Cities with link(CONCEPT_FAMILY,2) with negative link(CONCEPT_OPINION_FAMILY,3). These Units will prefer to attack Units of the Nation from which they spawned. Rebel Units remember their oringinal link(CONCEPT_FAMILY), so Units of the same link(CONCEPT_FAMILY) receive a int(SAME_FAMILY_MODIFIER)%{ATTACKDEFENSE} combat modifier.)</de-DE>
 	</Entry>
@@ -23,12 +26,18 @@
 		<de-DE>Räuber~Räuber~ein Räuber~Räuber~Räuber</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_RAIDERS_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_RAIDERS_HELP</zType>
 		<de-DE>Raiders emerge from Tribal Sites which have too many Units. A random number of the Tribe's Units are turned into Raiders, who target a nearby City at link(DIPLOMACY_WAR) or link(DIPLOMACY_TRUCE) with the Tribe. However, Raiders are always at link(DIPLOMACY_WAR) with all link(CONCEPT_NATION,2). (Tribes in link(CONCEPT_ALLIANCE_TRIBE,1) will never become Raiders.)</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_BARBARIANS</zType>
 		<de-DE>Barbaren~Barbarische~ein Barbare~Barbaren~Barbare</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_BARBARIANS_F</zType>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_BARBARIANS_HELP</zType>
@@ -39,47 +48,84 @@
 		<de-DE>Gallier~Gallische~ein Gallier~Galliern~Gallier</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_GAULS_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_GAULS_NICK</zType>
 		<de-DE>der Gallier</de-DE>
+	</Entry>
+	
+	<Entry>
+		<zType>TEXT_TRIBE_GAULS_NICK_F</zType>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_VANDALS</zType>
 		<de-DE>Vandalen~Vandalische~ein Vandale~Vandalen~Vandale</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_VANDALS_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_VANDALS_NICK</zType>
 		<de-DE>der Vandale</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_VANDALS_NICK_F</zType>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_DANES</zType>
 		<de-DE>Dänen~Dänische~ein Däne~Dänen~Däne</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_DANES_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_DANES_NICK</zType>
 		<de-DE>der Däne</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_DANES_NICK_F</zType>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_THRACIANS</zType>
 		<de-DE>Thraker~Thrakische~ein Thraker~Thraker~Thraker</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_THRACIANS_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_THRACIANS_NICK</zType>
 		<de-DE>der Thraker</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_THRACIANS_NICK_F</zType>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_SCYTHIANS</zType>
 		<de-DE>Skythen~Skythische~ein Skythe~Skythen~Skythe</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_SCYTHIANS_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_SCYTHIANS_NICK</zType>
 		<de-DE>der Skythe</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_SCYTHIANS_NICK_F</zType>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_NUMIDIANS</zType>
 		<de-DE>Numiden~Numidische~ein Numide~Numiden~Numide</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_NUMIDIANS_F</zType>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_NUMIDIANS_NICK</zType>
 		<de-DE>der Numide</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_NUMIDIANS_NICK_F</zType>
 	</Entry>
 </Root>
